--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,11 +8,11 @@
 
 
     <string name="dummy_button">تماس باما</string>
-    <string name="intro">اپلیکشن خیاطی مخصوص به مشتریان ما میباشد و اگر میخواهید از این اپلیکشن استفاده با ما تماس شود    </string>
+    <string name="intro">اپلیکشن خیاطی مخصوص به مشتریان ما میباشد  برای استفاده از این اپلیکشن  با ما در تماس شوید </string>
 
-    <string name="wasi">عبدلواسع کاکر</string>
+    <string name="wasi">مرتضی قربانی</string>
     <string name="younisail">yonesrana@gmail.com</string>
-    <string name="wasimail">wsi@gmail.com</string>
+    <string name="wasimail">morteza.gh678@gmail.com</string>
     <string name="timor_na">تیمورشاه تایب</string>
     <string name="timor_email">taib2020@gmail.com</string>
     <string name="younis">یونس محمدی</string>
