--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="younis">یونس محمدی</string>
     <string name="saraj">سراج احمد قادری</string>
     <string name="saraj_email">sarajbina@gmail.com</string>
+    <string name="wasi_2">عبدالواسع کاکر</string>
 </resources>
